[package]
name = "rtiles"
description = "3D Tiles caching server"
authors = ["Nikolay Ishiev <ishiev@primetver.ru>"]
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket-cache-response = "0.6"
serde = { version = "1", features = ["derive"] }
moka = { version = "0.8", features = ["future", "dash"] }
reqwest = "0.11"
log     = "^0"